feat(outbox): let an operator read the dead letters, not just replay them
DeadLetterStore.replay takes an event id and its Javadoc says it is for an
operator or a support tool. Neither has an id. The port had store and
replay and nothing that reads, so the only way to obtain the one argument
the method needs was to query aipersimmon_dead_letter by hand — which is
exactly what the reference application had to do, coupling itself to a
table it does not own. Setting a message aside is worth something only if
it can be found again.

DeadLetters is that read side: a cursor-paged listing, newest failure
first, plus find-by-id for the operator who arrives from an alert.

Four decisions worth stating:

A separate port, not new methods on DeadLetterStore. That store's Javadoc
invites replacing the bean to raise an alert or forward to a quarantine
topic, and such an implementation has nothing to list; requiring list()
from it would be wrong, and adding abstract methods would break existing
implementors on the spot. Split, a storage backend registers both beans, a
forwarder leaves the reader absent, and an operations surface that needs it
fails to wire rather than pretending it can look.

DeadLetter is the port's own view and carries no payload. Triage asks why
this did not go out; the message body answers none of that and does not
belong on an operations screen.

Paging is keyed on the table's identity column, not failed_at. The id is
assigned when the relay gives up, so descending id already means newest
failure first, it is unique when two rows are abandoned in the same
millisecond, and it is the primary key so no index is added.

-outbox therefore depends on -cqrs, for Slice and Cursor alone. One more
module edge is the better trade than a second pagination vocabulary for one
operations listing; both are framework-free, so the module's no-Spring rule
holds and there is no cycle.

The sample loses its mapper entirely: the ops controller now holds two
ports, no SQL, and page