@@ -1,12 +1,14 @@
 package com.example;
 
+import com.aipersimmon.ddd.cqrs.page.Cursor;
+import com.aipersimmon.ddd.cqrs.page.Slice;
+import com.aipersimmon.ddd.outbox.DeadLetter;
 import com.aipersimmon.ddd.outbox.DeadLetterStore;
+import com.aipersimmon.ddd.outbox.DeadLetters;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.tags.Tag;
-import java.time.Instant;
-import java.util.List;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -29,36 +31,53 @@ import org.springframework.web.bind.annotation.RestController;
  * deployment puts this behind an operator role; the scaffold has no security context, so it is
  * simply mounted under {@code /ops}.
  *
- * <h2>Why the listing is hand-written SQL</h2>
- *
- * <p>{@link DeadLetterStore} offers {@code store} and {@code replay} and nothing that reads, so
- * there is no supported way to answer "what is in there". Replay takes an {@code eventId} the
- * operator has no means of obtaining from the framework — the port assumes they already know it,
- * which is only true if they found it by querying the table themselves. So {@link DeadLetterMapper}
- * reads the table directly, coupling the sample to a schema it does not own (issue-00066).
+ * <p>Both halves come from ports: {@link DeadLetters} reads and {@link DeadLetterStore} replays, so
+ * this class holds no SQL and knows nothing about the {@code aipersimmon_dead_letter} table it is
+ * showing (it used to have to — issue-00066). The listing pages by opaque cursor exactly like
+ * {@code GET /orders} does, because it is the same read-model shape.
  */
 @RestController
 @RequestMapping("/ops/dead-letters")
 @Tag(name = "Operations", description = "Inspect and replay messages the outbox relay gave up on")
 public class DeadLetterOpsController {
 
-  private final DeadLetterStore deadLetters;
-  private final DeadLetterMapper mapper;
+  /** Above this a "listing" is a database dump; an operator pages instead. */
+  private static final int MAX_PAGE = 200;
 
-  public DeadLetterOpsController(DeadLetterStore deadLetters, DeadLetterMapper mapper) {
+  private final DeadLetters deadLetters;
+  private final DeadLetterStore store;
+
+  public DeadLetterOpsController(DeadLetters deadLetters, DeadLetterStore store) {
     this.deadLetters = deadLetters;
-    this.mapper = mapper;
+    this.store = store;
   }
 
-  /** What the relay gave up on, most recent first. */
+  /** What the relay gave up on, most recent failure first. */
   @Operation(summary = "List messages the relay gave up on")
-  @ApiResponse(responseCode = "200", description = "The dead letters currently held.")
+  @ApiResponse(responseCode = "200", description = "A page of the dead letters currently held.")
   @GetMapping
-  public List<DeadLetter> list(
-      @Parameter(description = "Maximum rows to return.", example = "50")
-          @RequestParam(defaultValue = "50")
-          int limit) {
-    return mapper.recent(Math.min(Math.max(limit, 1), 200));
+  public Slice<DeadLetter> list(
+      @Parameter(description = "Cursor from the previous page; omit for the first page.")
+          @RequestParam(required = false)
+          String cursor,
+      @Parameter(description = "Page size; clamped here.", example = "20")
+          @RequestParam(defaultValue = "20")
+          int size) {
+    return deadLetters.list(
+        cursor == null ? null : Cursor.of(cursor), Math.clamp(size, 1, MAX_PAGE));
+  }
+
+  /** One dead letter, for an operator who arrived with an id from an alert or a log line. */
+  @Operation(summary = "Fetch one dead letter by event id")
+  @ApiResponse(responseCode = "200", description = "Why that message was given up on.")
+  @ApiResponse(responseCode = "404", description = "No dead letter with that id.")
+  @GetMapping("/{eventId}")
+  public ResponseEntity<DeadLetter> get(
+      @Parameter(description = "The dead letter's event id.") @PathVariable String eventId) {
+    return deadLetters
+        .find(eventId)
+        .map(ResponseEntity::ok)
+        .orElseGet(() -> ResponseEntity.notFound().build());
   }
 
   /**
@@ -73,18 +92,8 @@ public class DeadLetterOpsController {
   @PostMapping("/{eventId}/replay")
   public ResponseEntity<Void> replay(
       @Parameter(description = "The dead letter's event id.") @PathVariable String eventId) {
-    return deadLetters.replay(eventId)
+    return store.replay(eventId)
         ? ResponseEntity.noContent().build()
         : ResponseEntity.notFound().build();
   }
-
-  /** One row of the dead-letter listing. */
-  public record DeadLetter(
-      String eventId,
-      String type,
-      int version,
-      int attempts,
-      String reason,
-      String lastError,
-      Instant failedAt) {}
 }
